# cs501r-hce

./: .gitignore  CS501r_Lab_Introduction.ipynb  Lab_Exploration_1_BLEU_and_BERTScore.ipynb  Lab_Exploration_2_LM_Eval_Harness.ipynb  Lab_Exploration_3_G_Eval.ipynb
final/: .gitignore  CLAUDE.md  Notes.md
final/gratification-bench/: .env.example  pyproject.toml  run_eval.sh  settings.toml
final/gratification-bench/analysis/: app.py
final/gratification-bench/results/: claude_sonnet_46.jsonl  gemini3_flash.jsonl  gemma4_31b.jsonl  gpt5.jsonl  gptoss120b_addiction.jsonl  gptoss_120b.jsonl  gptoss_20b.jsonl  grok_41_fast.jsonl  llama4_scout_drift.jsonl  openrouter_gptoss20b_gemini_judge.jsonl  preview_run.jsonl
final/gratification-bench/scripts/: generate_cases.py  monitor_runs.py  monitor_runs.sh
final/gratification-bench/src/gratificationbench/: __init__.py  __main__.py  conversation.py  (+4 more)
final/gratification-bench/test_cases/: schema.json
final/gratification-bench/tests/: test_scoring.py
final/prosocial-bench/: .env.example  .gitignore  pyproject.toml  settings.toml
final/prosocial-bench/analysis/: app.py
final/prosocial-bench/scripts/: generate_cases.py
final/prosocial-bench/src/prosocialbench/: __init__.py  __main__.py  conversation.py  dataset.py  metric.py  prompts.py  scoring.py
final/prosocial-bench/test_cases/: schema.json
final/prosocial-bench/test_cases/cases/: addiction.json  health.json  honesty.json  mental_health.json  productivity.json  professional.json  relationships.json  technology.json
final/prosocial-bench/tests/: test_scoring.py
(+8 files in other folders)
